# aoc2020

day_01/: Cargo.toml
day_01/src/: main.rs
day_02/: Cargo.toml
day_02/src/: main.rs
day_03/: Cargo.toml
day_03/src/: main.rs
