[package]
name = "day_02"
version = "0.1.0"
authors = ["Adam Lesperance <lespea@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
atoi = "0.4.0"
bstr = {version = "0", default_features = false, features = ["std"]}